todo-app/frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: todo-app-frontend
    namespace: project

spec:
    replicas: 1
    selector:
        matchLabels:
            app: todo-app-frontend
    template:
        metadata:
            labels:
                app: todo-app-frontend

        spec:
            containers:
                - name: todo-app-frontend
                  image: aitoaarni/todo-app-frontend:2.6
                  imagePullPolicy: Always
