todo-app/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: todo-app-frontend-svc
    namespace: project
spec:
    type: ClusterIP
    selector:
        app: todo-app-frontend
    ports:
        - port: 2345
          protocol: TCP
          targetPort: 8080
