todo-app/frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: dwk-material-ingress2
    namespace: project

spec:
    rules:
        - http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: todo-app-backend-svc
                            port:
                                number: 3000
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: todo-app-frontend-svc
                            port:
                                number: 2345
